# digital-subscription-manager

./: .gitignore  README.md  plan.md
.devcontainer/: Dockerfile  DockerfileJdk17Default  DockerfilePythonDefault  DockerfileSmall  entrypoint.sh  supervisord.conf
backend/: backend_test.py  pyproject.toml  server.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js
