[tool.poetry]
name = "backend"
authors = ["Your Name <your.email@example.com>"]
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.1"
uvicorn = "0.25.0"
boto3 = "^1.34.129"
requests-oauthlib = "^2.0.0"
cryptography = "^42.0.8"
python-dotenv = "^1.0.1"
pymongo = "4.5.0"
pydantic = "^2.6.4"
motor = "3.3.1"
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
python-jose = "^3.3.0"
requests = "^2.31.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
